2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* netfs.c: Add #include <sys/mman.h> for munmap decl.
	* ccache.c: Likewise.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* ccache.c (ccache_read): Use mmap instead of vm_allocate.
	* netfs.c (get_dirents): Likewise.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* ccache.c (ccache_read): Use munmap instead of vm_deallocate.
	(ccache_invalidate): Likewise.
	(ccache_free): Likewise.
	* netfs.c (get_dirents): Likewise.

Sun Jan 31 18:33:55 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* netfs.c (netfs_attempt_utimes): Implement new possibility that
	ATIME or MTIME might be null.

1998-10-20  Roland McGrath  <roland@baalperazim.frob.com>

	* ftpfs.c (netfs_append_args): Add braces to silence gcc warning.
	* netfs.c (get_dirents): Likewise.
	(netfs_get_dirents): Likewise.
	* dir.c (ftpfs_refresh_node): Likewise.
	(ftpfs_dir_lookup): Likewise.

1998-09-04  Roland McGrath  <roland@baalperazim.frob.com>

	* ftpfs.c (netfs_append_args): Use %ld for time_t and %Zu for size_t.

1997-09-09  Miles Bader  <miles@gnu.ai.mit.edu>

	* ftpfs.c (parse_runtime_opt): New function.
	(runtime_argp): Use it.
	(netfs_append_args): Fix printed name of --node-cache-size.

	* dir.c (delete): Immediately free entries without nodes.

1997-08-29  Miles Bader  <miles@gnu.ai.mit.edu>

	* ftpfs.c (parse_startup_opt): Report an error if no filesystem is
	supplied.

1997-08-27  Miles Bader  <miles@gnu.ai.mit.edu>

	* ftpfs.c (parse_common_opt): Turn on debugging when there *aren't*
	any errors...

1997-08-22  Miles Bader  <miles@gnu.ai.mit.edu>

	* ftpfs.c (parse_common_opt): Release DEBUG_LOCK even if we get an
	error.
