@@ -1,3 +1,13 @@
+2000-12-21  Marcus Brinkmann  <marcus@gnu.org>
+
+	* dir.c (ftpfs_dir_create): New macro INIT_HTABLE_LEN to
+	specify initialize htable_len. New variable htable,
+	allocate memory to it with calloc before acquiring a node
+	reference. If this fails, return any allocated memory and
+	return with ENOMEM. Set new->htable_len to INIT_HTABLE_LEN
+	and new->htable to htable. Don't bzero htable anymore, as
+	we use calloc.
+
 2000-07-26  Mark Kettenis  <kettenis@gnu.org>
 
 	* Makefile (HURDLIBS): Reorder libs such that the threads lib
